--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -43,12 +43,14 @@
         </div>
         <div class="collapse navbar-collapse" role='navigation'>
             <ul class='nav navbar-nav'>
-                {% if request.user.is_authenticated %}
-                {% if request.user.participant %}
+                {% if user.is_authenticated %}
+                {% if user.participant %}
                 <li class='{% active_re request participate %}'><a href='{{ participate }}'><i class='fa fa-users'></i> Participate</a></li>
-                {% elif request.user.experimenter %}
+                {% elif user.experimenter %}
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='fa fa-tachometer'></i> Dashboard</a></li>
+                {% if not user.experimenter.is_demo_experimenter %}
                 <li class='{% active_re request subjectpool %}'><a href='{{ subjectpool }}'><i class='fa fa-users'></i> Subject recruitment</a></li>
+                {% endif %}
                 {% endif %}
                 {% endif %}
                 <li class='{% active_re request "contact" %}'><a href='/contact'><i class='fa fa-bell-o'></i> Contact us</a></li>
@@ -58,9 +60,9 @@
             {% endblock headerlinks %}
             {% block login %}
             <ul class='nav navbar-nav navbar-right'>
-                {% if request.user.is_authenticated %}
+                {% if user.is_authenticated %}
                 <li class='{% active request login %} dropdown'>
-                <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{request.user.email}} <i class='fa fa-chevron-down'></i></a>
+                <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{ user.email }} <i class='fa fa-chevron-down'></i></a>
                     <ul class='dropdown-menu'>
                         <li><a href='{{ profile }}'><i class='fa fa-user'></i> Account</a></li>
                         <li><a href='{{ logout }}'><i class='fa fa-sign-out'></i> Sign out</a></li>
@@ -71,7 +73,7 @@
                     {% if DEBUG %}
                     <a href='{{ login }}'>
                     {% else %}
-                    <a href='https://{{request.get_host}}{{ login }}'>
+                    <a href='https://{{ request.get_host }}{{ login }}'>
                     {% endif %}
                     <i class='fa fa-sign-in'></i> Sign In</a>
                 </li>
